# cloud-sharing

./: .gitignore  README.md  project-description.txt  readme.txt
backend/: .env.example  requirements.txt
backend/app/: config.py  main.py
backend/app/middleware/: auth.py
backend/app/routes/: auth.py  files.py  notifications.py  share.py
backend/app/workers/: share_worker.py
cloudshare-lib/: README.md  pyproject.toml
cloudshare-lib/cloudshare/: __init__.py  auth.py  database.py  messaging.py  notifications.py  storage.py
deploy/: aws-resources-setup.md  setup.sh
frontend/: next.config.js  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/confirm/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/notifications/: page.tsx
frontend/app/register/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: FileCard.tsx  Navbar.tsx
frontend/lib/: api.ts  auth.ts
nginx/: nginx.conf
