[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cloudshare-lib"
version = "0.1.0"
description = "OOP Python library for AWS cloud file sharing: S3, DynamoDB, SQS, SNS, and Cognito."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["aws", "s3", "dynamodb", "sqs", "sns", "cognito", "cloud", "file-sharing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]
dependencies = [
    "boto3>=1.34.0",
]

[project.urls]
Homepage = "https://pypi.org/project/cloudshare-lib/"
Repository = "https://github.com/yourusername/cloud-sharing-2"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudshare*"]
